fix issue of dark mode toggle on first click

--- a/src/components/NavBar/navbar.module.scss
+++ b/src/components/NavBar/navbar.module.scss
@@ -28,6 +28,11 @@
   }
 }
 
+.active {
+  color: white;
+  border-bottom: 4px solid white;
+}
+
 .backToHome {
   margin: 3rem 0 0;
 }
